# bg-remover

./: .gitignore  README.md  main.py  pyproject.toml
src/birefnet/: __init__.py  cli.py  inference.py  model.py  postprocess.py  preprocess.py  types.py
tests/: conftest.py  test_inference.py  test_integration.py  test_model.py  test_postprocess.py  test_preprocess.py
