[project]
name = "birefnet"
version = "0.1.0"
description = "BiRefNet Background Removal Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "huggingface-hub>0.25",
    "kornia>=0.8.2",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "rich>=13.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "timm>=1.0.24",
    "torch>=2.5.0",
    "torchvision>=0.25.0",
    "transformers>=4.45.0,<5.0.0",
    "typer>=0.15",
]

[project.scripts]
birefnet = "birefnet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/birefnet"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
